// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Buttons/Button Basic smoke-test 1`] = `
<button class="isolate inline-flex items-center justify-center whitespace-nowrap rounded-3xl font-semibold transition-colors ease-in-out focus-visible:outline-3 focus-visible:outline-brand-selected [&amp;_svg]:pointer-events-none [&amp;_svg]:shrink-0 inset-ring-brand bg-brand text-fg-2 enabled:hover:bg-brand-hover h-11 min-h-11 gap-2 px-4 text-base only:[&amp;_svg]:size-6 inset-ring-1 cursor-pointer"
        tabindex="0"
>
  Button
</button>
`;

exports[`components/Buttons/Button Disabled play-test 1`] = `
<button class="isolate inline-flex items-center justify-center whitespace-nowrap rounded-3xl font-semibold transition-colors ease-in-out focus-visible:outline-3 focus-visible:outline-brand-selected [&amp;_svg]:pointer-events-none [&amp;_svg]:shrink-0 inset-ring-brand enabled:hover:bg-brand-hover h-11 min-h-11 gap-2 px-4 text-base only:[&amp;_svg]:size-6 cursor-not-allowed bg-fill-1 text-disabled [&amp;_svg]:text-disabled"
        disabled
        tabindex="-1"
>
  Button
</button>
`;

exports[`components/Buttons/Button IconOnly smoke-test 1`] = `
<button aria-label="Go to GitHub"
        class="isolate inline-flex items-center justify-center whitespace-nowrap rounded-3xl font-semibold transition-colors ease-in-out focus-visible:outline-3 focus-visible:outline-brand-selected [&amp;_svg]:pointer-events-none [&amp;_svg]:shrink-0 inset-ring-brand bg-brand text-fg-2 enabled:hover:bg-brand-hover h-11 min-h-11 gap-2 text-base only:[&amp;_svg]:size-6 inset-ring-1 cursor-pointer aspect-square px-0"
        tabindex="0"
>
  <svg viewbox="0 0 24 24"
       xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       fill="currentColor"
       class="remixicon "
  >
    <path d="M12.001 2C6.47598 2 2.00098 6.475 2.00098 12C2.00098 16.425 4.86348 20.1625 8.83848 21.4875C9.33848 21.575 9.52598 21.275 9.52598 21.0125C9.52598 20.775 9.51348 19.9875 9.51348 19.15C7.00098 19.6125 6.35098 18.5375 6.15098 17.975C6.03848 17.6875 5.55098 16.8 5.12598 16.5625C4.77598 16.375 4.27598 15.9125 5.11348 15.9C5.90098 15.8875 6.46348 16.625 6.65098 16.925C7.55098 18.4375 8.98848 18.0125 9.56348 17.75C9.65098 17.1 9.91348 16.6625 10.201 16.4125C7.97598 16.1625 5.65098 15.3 5.65098 11.475C5.65098 10.3875 6.03848 9.4875 6.67598 8.7875C6.57598 8.5375 6.22598 7.5125 6.77598 6.1375C6.77598 6.1375 7.61348 5.875 9.52598 7.1625C10.326 6.9375 11.176 6.825 12.026 6.825C12.876 6.825 13.726 6.9375 14.526 7.1625C16.4385 5.8625 17.276 6.1375 17.276 6.1375C17.826 7.5125 17.476 8.5375 17.376 8.7875C18.0135 9.4875 18.401 10.375 18.401 11.475C18.401 15.3125 16.0635 16.1625 13.8385 16.4125C14.201 16.725 14.5135 17.325 14.5135 18.2625C14.5135 19.6 14.501 20.675 14.501 21.0125C14.501 21.275 14.6885 21.5875 15.1885 21.4875C19.259 20.1133 21.9999 16.2963 22.001 12C22.001 6.475 17.526 2 12.001 2Z">
    </path>
  </svg>
</button>
`;

exports[`components/Buttons/Button WithPrefix smoke-test 1`] = `
<button class="isolate inline-flex items-center justify-center whitespace-nowrap rounded-3xl font-semibold transition-colors ease-in-out focus-visible:outline-3 focus-visible:outline-brand-selected [&amp;_svg]:pointer-events-none [&amp;_svg]:shrink-0 inset-ring-brand bg-brand text-fg-2 enabled:hover:bg-brand-hover h-11 min-h-11 gap-2 px-4 text-base only:[&amp;_svg]:size-6 inset-ring-1 cursor-pointer"
        tabindex="0"
>
  <svg viewbox="0 0 24 24"
       xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       fill="currentColor"
       class="remixicon "
  >
    <path d="M7.82843 10.9999H20V12.9999H7.82843L13.1924 18.3638L11.7782 19.778L4 11.9999L11.7782 4.22168L13.1924 5.63589L7.82843 10.9999Z">
    </path>
  </svg>
  Button
</button>
`;

exports[`components/Buttons/Button WithPrefixAndSuffix smoke-test 1`] = `
<button class="isolate inline-flex items-center justify-center whitespace-nowrap rounded-3xl font-semibold transition-colors ease-in-out focus-visible:outline-3 focus-visible:outline-brand-selected [&amp;_svg]:pointer-events-none [&amp;_svg]:shrink-0 inset-ring-brand bg-brand text-fg-2 enabled:hover:bg-brand-hover h-11 min-h-11 gap-2 px-4 text-base only:[&amp;_svg]:size-6 inset-ring-1 cursor-pointer"
        tabindex="0"
>
  <svg viewbox="0 0 24 24"
       xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       fill="currentColor"
       class="remixicon "
  >
    <path d="M7.82843 10.9999H20V12.9999H7.82843L13.1924 18.3638L11.7782 19.778L4 11.9999L11.7782 4.22168L13.1924 5.63589L7.82843 10.9999Z">
    </path>
  </svg>
  Button
  <svg viewbox="0 0 24 24"
       xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       fill="currentColor"
       class="remixicon "
  >
    <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
    </path>
  </svg>
</button>
`;

exports[`components/Buttons/Button WithSuffix smoke-test 1`] = `
<button class="isolate inline-flex items-center justify-center whitespace-nowrap rounded-3xl font-semibold transition-colors ease-in-out focus-visible:outline-3 focus-visible:outline-brand-selected [&amp;_svg]:pointer-events-none [&amp;_svg]:shrink-0 inset-ring-brand bg-brand text-fg-2 enabled:hover:bg-brand-hover h-11 min-h-11 gap-2 px-4 text-base only:[&amp;_svg]:size-6 inset-ring-1 cursor-pointer"
        tabindex="0"
>
  Button
  <svg viewbox="0 0 24 24"
       xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       fill="currentColor"
       class="remixicon "
  >
    <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
    </path>
  </svg>
</button>
`;
